# clawos

./: .editorconfig  .gitignore  ABSORPTION.md  CHANGELOG.md  CONTRIBUTING.md  EVOLUTION.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_SUMMARY.md  LAUNCH_BLOCKERS.md  LAUNCH_CHECKLIST.md  LAUNCH_FIXUP.md  LAUNCH_PLAN.md  LICENSE  Makefile  PROJECT_TRUTH.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  SESSION_HANDOFF.md  __init__.py  install.sh  pyproject.toml  update.md
.claude/: launch.json  settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml  security.yml
.pytest_tmp/pytest-of-Abrxr Hxbib/: pytest-current
.pytest_tmp/tmpowso5zaf/: policy.json
adapters/: __init__.py
adapters/audio/: __init__.py  elevenlabs_adapter.py  tts_router.py  whisper_adapter.py
adapters/audit/: __init__.py
adapters/browser/: __init__.py  playwright_adapter.py  session_manager.py
adapters/memory/: __init__.py  graph_adapter.py
adapters/models/: __init__.py
adapters/policy/: __init__.py  local_policy_adapter.py
bootstrap/: __init__.py  bootstrap.py  hardware_probe.py  memory_init.py  model_provision.py  permissions_init.py  profile_selector.py  service_enable.py  workspace_init.py
clawctl/: __init__.py  demos.py  main.py
clawctl/commands/: __init__.py  a2a.py  ace.py  benchmark.py  briefing.py  budget.py  code.py  compare.py  cookbook.py  dashboard.py  doctor.py  durable.py  extensions.py  framework.py  health_dash.py  license.py  logs.py  mcp.py  mcpd.py  mission.py  model.py  observ.py  omi.py  openclaw.py  packs.py  presence.py  project.py  providers.py  rescue.py  research.py  search.py  skill.py  start.py  status.py  stop.py  verify.py  voice.py  whatsapp.py  workflow.py  workspace.py
clawctl/ui/: __init__.py  banner.py
clawos_core/: __init__.py  ambient.py  bootstrap.py  catalog.py  circuit_breaker.py  constants.py  daemon_http.py  database.py  desktop_integration.py  exceptions.py  fastapi_lifespan.py  feature_gate.py  key_registry.py  license.py  logging_config.py  performance.py  platform.py  presence.py  security.py  service_manager.py  service_registry.py  startup_probe.py  tool_result.py
clawos_core/config/: __init__.py  loader.py  schema.py
clawos_core/events/: __init__.py  bus.py
clawos_core/logging/: __init__.py  audit.py
clawos_core/models/: __init__.py
clawos_core/util/: __init__.py  git.py  ids.py  jsonx.py  paths.py  time.py
clients/: __init__.py
clients/cli/: __init__.py  repl.py
clients/daemon/: daemon.py
clients/dashboard/: index.html
clients/desktop/: __init__.py  launch_command_center.py
configs/: balanced.yaml  defaults.yaml  gaming.yaml  lowram.yaml  performance.yaml
content_factory_skill/: .gitignore  README.md  SKILL.md  install.sh  test_factory.py  youtube_upload.py
content_factory_skill/content_factory_skill/: install.sh  youtube_upload.py
content_factory_skill/factory/: .env.example  factory.py  factoryctl  factoryctl.py  preflight.py  start.sh  start_visual.sh  stop.sh
dashboard/: App.jsx  install.sh
dashboard/backend/: README_LEGACY.md  dashd@.service  service.py
dashboard/frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.js
dashboard/nexus-command/: serve.py
demos/: README.md  essay_to_editor.py  morning_briefing.sh
desktop/command-center/: README.md  package.json
desktop/command-center/src-tauri/: Cargo.toml  tauri.conf.json
desktop/command-center/src-tauri/src/: main.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_CURRENT.md  ARCHITECTURE_DIAGRAM.md  BUG_BOUNTY_REPORT.md  CLI_REFERENCE.md  COMPETITIVE_PLATFORM.md  COMPLETION_SUMMARY.md  DEMOS.md  DEPLOYMENT_GUIDE.md  END_TO_END_TEST_REPORT.md  FEATURES.md  FEATURE_PLANS_HERMES.md  FIGMA_SYSTEM.md  INSTALL_URL_SETUP.md  MACOS.md  MCP_INTEGRATION.md  PRODUCTION.md  PRODUCT_VISION.md  PROJECT_TRUTH.md  ROADMAP.md  SECURITY_AUDIT.md  STABILIZATION_ROADMAP.md  SUPABASE_SETUP.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  VERIFICATION.md
docs/LAUNCH/: hn_submission.md  producthunt.md  twitter_thread.md
docs/adr/: 0001-canonical-frontend.md  0002-canonical-dashboard-api.md  0003-setup-platform.md  0004-desktop-shell.md  0005-release-artifacts.md
docs/research/: CLAWOS_ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  CRITICAL_GAPS_RESEARCH.md  IDENTITY.md  JARVISION_MASTERPLAN.md  JARVISION_RESEARCH.md  JARVIS_30_DAY_PLAN.md  MEMORY.md  RELEVANT_REPOS.md  SOCIAL_AUTOMATION_WORKFLOW.md  SOUL.md  STRATEGIC_MASTERPLAN.md  USER.md  VOICE_RESEARCH.md
frameworks/: installer.py  registry.py  runner.py
frameworks/catalog/: agentzero.yaml  langroid.yaml  nanoclaw.yaml  nullclaw.yaml  openai_agents.yaml  openclaw.yaml  pocketflow.yaml  smolagents.yaml  zeroclaw.yaml
landing/: index.html  og-card.html
nexus/: __init__.py  cli.py  scanner.py
openclaw_integration/: __init__.py  compression.py  config_gen.py  installer.py  launcher.py  register_peers.py  responses_api.py
packaging/appimage/: build_appimage.sh
scripts/: clawos-start.sh  clawos-status.sh  clawos-stop.sh  dev_boot.sh  gen_comparison_png.py  gen_social_assets.py  install-resume.sh  mcp-demo.py  security_audit.py  seed_workspace.sh  setup-launchd.sh  setup-systemd.sh  test_install.sh  validate_install.sh  validate_package.sh  verify-setup.sh  verify_repo.py
skills/: __init__.py
systemd/: clawos-a2ad.service  clawos-agentd.service  clawos-clawd.service  clawos-dashd.service  clawos-gatewayd.service  clawos-memd.service  clawos-metricd.service  clawos-modeld.service  clawos-picoclawd.service  clawos-policyd.service  clawos-reminderd.service  clawos-scheduler.service  clawos-toolbridge.service  clawos-voiced.service  clawos-waketrd.service  clawos.service
tests/: __init__.py  conftest.py  test_compression.py  test_subagent.py
tools/: __init__.py  browser_tools.py
website/: index.html  vercel.json
workflows/: __init__.py  discovery.py  durable_engine.py  engine.py  helpers.py
(+791 files in other folders)
