[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawos"
version = "0.1.0"
description = "ClawOS - local-first AI agent OS"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.10"
keywords = ["ai", "agent", "llm", "ollama", "local", "offline"]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "fastapi>=0.100",
    "uvicorn>=0.24",
    "ollama>=0.1",
    "click>=8.0",
    "websockets>=11.0",
    "httpx>=0.25",
    "python-multipart>=0.0.9",
    "cryptography>=41.0",
    "networkx>=3.2",
    "pdfplumber>=0.10",
    "python-docx>=1.1",
    "ptyprocess>=0.7; platform_system != 'Windows'",
    "pywinpty>=2.0; platform_system == 'Windows'",
]

[project.optional-dependencies]
voice = [
    "openai-whisper>=20231117",
    "piper-tts>=1.2",
    "pyaudio>=0.2",
    "elevenlabs>=1.0",
]
memory = [
    "chromadb>=0.5",
    "json-repair>=0.20",
]
browser = [
    "playwright>=1.40",
]
brain = [
    "langchain-experimental>=0.0.50",
    "langchain-ollama>=0.1",
    "cdlib>=0.3",
]
full = [
    "clawos[voice]",
    "clawos[memory]",
    "clawos[browser]",
    "clawos[brain]",
]

[project.scripts]
clawctl = "clawctl.main:main"
clawos = "clawctl.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "clawos_core*",
    "bootstrap*",
    "setup*",
    "runtimes*",
    "services*",
    "adapters*",
    "tools*",
    "clawctl*",
    "clients*",
    "openclaw_integration*",
    "workflows*",
    "nexus*",
    "skills*",
]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"
